--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,14 @@
 // *:after {
 //   outline: 1px solid red;
 // }
+
+.App {
+}
+
+/*
+ * Стили компонента Searchbar
+ */
+
 html {
   box-sizing: border-box;
   width: 100vw;
